IGNITE-20361 implement storage profile for table descriptor (#94)